removed static usage

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -160,7 +160,7 @@ h3, h4, h5{
 .reshead{
     display: inline-block;
     /* float: left; */
-    width:calc(100%);
+    width:230px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -242,7 +242,7 @@ footer{
 </style>
 <!-- <script>
 window.setTimeout(function () {
-    location.href = "http://127.0.0.1:8000/home/";
+    location.href = "http://127.0.0.1:8000/";
 }, 1000);
 </script> -->
 </body>
