--- a/main/templates/search.html
+++ b/main/templates/search.html
@@ -145,14 +145,14 @@ h3, h4, h5{
     margin: 0;
     display: inline; 
 }
+.main-wrapper{
+    margin: auto 15px auto 10px;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+}
 .cards{
     background-color:white;
-    display: inline-flex;
-    flex-direction: row ;
-    flex-wrap: nowrap;
-    /* float: left; */
-    width: 250px;
-    margin: 10px;
     border-radius:5px;
     box-shadow: 2px 2px 3px black;
     text-overflow: ellipsis;
@@ -215,6 +215,7 @@ footer{
     color: black;
     font-weight:bold;
 }
+
 #name{
     position: absolute;
     top: 0px;
